--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,9 @@
     <string name="logout">Logout</string>
 
     <!--Sobre-->
-    <string name="versao">Versão do Aplicativo: 1.0</string>
+    <string name="versao">Versão do Aplicativo: 1.1</string>
     <string name="android">Versão do Android: 11</string>
-    <string name="desenvolvedor">DESENVOLVEDORES:</string>
+    <string name="desenvolvedor">DESENVOLVEDORA:</string>
     <string name="creditos">CRÉDITOS</string>
     <string name="textocreditos">Este aplicativo tem como finalidade possibilitar ao usuário o monitoramento de exercícios físicos, sua posição em tempo real e a apresentação do seu histórico de exercícios ao longo do tempo. as opções de visualização são configuráveis e é possivel acessar informações de posicionamento via satelíte</string>
 
